# LazySnapping-Android

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/wyx/lazysnapping_android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Lazy-Snapping.cpp  Lazy-Snapping.h  SimpleKMeans.cpp  SimpleKMeans.h  native-lib.cpp
app/src/main/java/com/wyx/lazysnappingandroid/: FileUtil.java  LazySnappingHelper.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/wyx/lazysnapping_android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
